# End-to-End-Customer-Churn

./: README.md  main.py  pyproject.toml
app/: main.py
research/: main.ipynb
